--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ bevy-inspector-egui = "0.23.3"
 bevy-inspector-egui-rapier = "0.9.0"
 bevy_egui = "0.25.0"
 bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
-
+image = "0.24.9"
 planet = {path = "../planet"}
 
 # Enable a small amount of optimization in debug mode
