--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bevy_egui = "0.25.0"
 bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
 image = "0.24.9"
 planet = {path = "../planet"}
+bevy_tweening = "0.10.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
