--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ serde_json = "1.0.114"
 serde_yaml = "0.9.33"
 dotenv = "0.15.0"
 rand = "0.8.5"
+strum = "0.23.0"
+strum_macros = "0.23.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
