--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 glam = "0.25.0"
 anyhow = "1.0.80"
-bevy = { version = "0.13.0", features = ["dynamic_linking"] }
+# bevy = { version = "0.13.0", features = ["dynamic_linking"] }
+bevy = { version = "0.13.0"}
 bevy-inspector-egui = "0.23.3"
 bevy-inspector-egui-rapier = "0.9.0"
 bevy_egui = "0.25.0"
-bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
+# bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
+bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d"]}
 image = "0.24.9"
 planet = {path = "../planet"}
 bevy_tweening = "0.10.0"
