--- a/save/save.yaml
+++ b/save/save.yaml
@@ -1,54 +1,54 @@
 changed: false
 fractal_noises:
 - z: 0.0
-  frequency: 1.12
+  frequency: 1.55
   lacunarity: 2.11
-  octaves: 0
+  octaves: 1
   persistence: 0.37000000000000005
-  amplitude: 0.37
+  amplitude: 0.088
   offset: 0.0
 - z: 0.0
-  frequency: 1.1400000000000001
-  lacunarity: 2.14
-  octaves: 4
+  frequency: 1.92
+  lacunarity: 1.99
+  octaves: 7
   persistence: 0.38
-  amplitude: 0.505
+  amplitude: 0.03
   offset: 0.0
 - z: 0.0
-  frequency: 1.11
-  lacunarity: 2.12
-  octaves: 4
+  frequency: 0.8800000000000001
+  lacunarity: 2.7
+  octaves: 10
   persistence: 0.373
-  amplitude: 0.373
+  amplitude: 0.25
   offset: 0.0
 noise_mask_options:
-  mask_frequency: 1.46
-  mask_z: 0.0
+  mask_frequency: 1.0
+  mask_z: 9.1
 global_noise_options:
   seed: 0
   z: 0.0
   frequency: 1.88
-  amplitude: 0.065
-radius: 0.955
-resolution: 590
+  amplitude: 0.97
+radius: 0.87
+resolution: 450
 ca_options:
   seed: 0
-  init_weight: 0.575
-  iterations: 60
-  search_radius: 2
+  init_weight: 0.292
+  iterations: 48
+  search_radius: 3
   threshold: 7
   invert: false
   mask_options:
-    mult: 16.95
+    mult: 0.0
     lift: 0.0
     clamp_max: 0.0
     clamp_min: 0.0
 blur: 1.0
 bitmap_dislpay: TileMapDebug
-scale: 315.0
+scale: 119.0
 show_texture: true
 show_vectors: true
-show_debug: true
+show_debug: false
 crust_thickness: 0.0
 displacement_scale: 0.0
 displacement_frequency: 0.0
@@ -61,6 +61,6 @@ gizmo_options:
 rooms: true
 player_jetpack_force: 18.0
 player_move_force: 18.0
-player_rotate_force: 1.0
+player_rotate_force: 0.01
 game_camera: true
-game_camera_zoom: 50.0
+game_camera_zoom: 13.0
