--- a/save/save.yaml
+++ b/save/save.yaml
@@ -1,60 +1,60 @@
 changed: false
 fractal_noises:
 - z: 0.0
-  frequency: 1.6700000000000002
-  lacunarity: 2.48
-  octaves: 4
-  persistence: 0.54
-  amplitude: 0.692
-  offset: 0.0
-- z: 0.0
-  frequency: 0.0
+  frequency: 0.29
   lacunarity: 0.0
   octaves: 0
   persistence: 0.0
-  amplitude: 0.0
+  amplitude: 0.135
+  offset: 0.05
+- z: 0.0
+  frequency: 0.06
+  lacunarity: 2.7600000000000002
+  octaves: 6
+  persistence: 0.565
+  amplitude: 0.127
   offset: 0.0
 - z: 0.0
-  frequency: 0.0
-  lacunarity: 0.0
-  octaves: 0
-  persistence: 0.0
-  amplitude: 0.0
-  offset: 0.0
+  frequency: 1.11
+  lacunarity: 2.8
+  octaves: 5
+  persistence: 0.5900000000000001
+  amplitude: 0.29
+  offset: -0.15
 noise_mask_options:
-  mask_frequency: 0.39
-  mask_z: 6.55
+  mask_frequency: 2.36
+  mask_z: 16.0
 global_noise_options:
   seed: 0
-  z: 0.0
-  frequency: 1.185
-  amplitude: 0.08
-radius: 1.0
-resolution: 1600
+  z: 77.0
+  frequency: 1.125
+  amplitude: 1.34
+radius: 0.83
+resolution: 385
 ca_options:
-  seed: 34
-  init_weight: 0.16
-  iterations: 26
-  search_radius: 5
-  threshold: 10
+  seed: 14
+  init_weight: 0.295
+  iterations: 8
+  search_radius: 3
+  threshold: 7
   invert: false
   mask_options:
-    mult: 0.0
+    mult: 4.25
     lift: 0.0
     clamp_max: 0.0
     clamp_min: 0.0
-blur: 1.0
+blur: 1.02
 bitmap_dislpay: TileMapDebug
-scale: 386.0
+scale: 220.0
 show_texture: false
 show_vectors: true
 show_debug: false
 crust_thickness: 0.0
 displacement_scale: 0.0
-displacement_frequency: 4.02
+displacement_frequency: 0.11700000000000002
 invert_ca: false
 gizmo_options:
-  draw_gizmos: false
+  draw_gizmos: true
   draw_centers: true
   draw_triangulation: false
   draw_mst: true
@@ -62,7 +62,8 @@ gizmo_options:
 rooms: true
 tunnels: true
 player_jetpack_force: 18.0
-player_move_force: 18.0
-player_rotate_force: 1.0
-camera_mode: BothOverview
-game_camera_zoom: 32.0
+player_move_force: 21.2
+player_rotate_force: 0.06
+camera_mode: Player
+game_camera_zoom: 30.0
+brush_size: 0.0
