--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,14 @@ bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d
 image = "0.24.9"
 planet = {path = "../planet"}
 bevy_tweening = "0.10.0"
-serde = "1.0.197"
+# serde = "1.0.197"
 serde_json = "1.0.114"
 serde_yaml = "0.9.33"
 dotenv = "0.15.0"
 rand = "0.8.5"
 strum = "0.23.0"
 strum_macros = "0.23.0"
+serde = { version = "1.0.197", features = ["derive"] }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
